rename GFA to RGFA to avoid conflicts with gfa gem

--- a/cheatsheet/rgfa-cheatsheet-1.0.1.tex
+++ b/cheatsheet/rgfa-cheatsheet-1.0.1.tex
@@ -45,11 +45,11 @@ Hamburg, Germany. This document is under CC-BY-SA license.}
 
 \begin{tabular}{|l|>{\ttfamily}l|}
   \hline
-  Create graph & GFA.new \\
-  \ldots from GFA file & GFA.from\_file("filename")\\
-  \ldots from string & string.to\_gfa \\
+  Create graph & RGFA.new \\
+  \ldots from GFA file & RGFA.from\_file("filename")\\
+  \ldots from string & string.to\_rgfa \\
   \ldots from string array (e.g.) & \verb/["H\tVN:i:1.0",/ \\
-                                     & \hspace{2.3mm}\verb/"S\tA\t*\tLN:i:1200"].to_gfa/ \\
+    & \hspace{2.3mm}\verb/"S\tA\t*\tLN:i:1200"].to_rgfa/ \\
   \hline
   Write GFA to file & gfa.to\_file(filename) \\
   Write GFA to standard output & puts gfa \\
