--- a/cheatsheet/rgfa-cheatsheet-1.1.tex
+++ b/cheatsheet/rgfa-cheatsheet-1.1.tex
@@ -8,7 +8,7 @@
 \usepackage{array}
 \fancyhf{}
 \renewcommand{\headrulewidth}{0pt}
-\rhead{\bfseries RGFA/RGFATools v.1.0.1 Cheatsheet (\thepage/\pageref{LastPage})
+\rhead{\bfseries RGFA/RGFATools v.1.1 Cheatsheet (\thepage/\pageref{LastPage})
 \hspace{1.1cm}}
 \lfoot{\tiny \ \ \ \ \ \ \ \ Copyright (c) 2016, Giorgio Gonnella, ZBH, University of
 Hamburg, Germany. This document is under CC-BY-SA license.}
@@ -72,12 +72,12 @@ Hamburg, Germany. This document is under CC-BY-SA license.}
   Find path & gfa.path(path\_name) \textrm{(or: }path!\textrm{)} \\
   All paths through segment & gfa.paths\_with(segment\_name) \\
   \hline
-  Find link & gfa.link(\verb/["1",:E]/,\verb/["2",:B]/) \textrm{(or: }link!\textrm{)} \\
-  (or, if multiple may exist) & gfa.links\_between(\verb/["1",:E]/,\verb/["2",:B]/) \\
-  All links of segment end & gfa.links\_of(\verb/["1",:E]/) \\
+  Find link & gfa.link(\verb/[:S1,:E]/,\verb/[:S2,:B]/) \textrm{(or: }link!\textrm{)} \\
+  (or, if multiple may exist) & gfa.links\_between(\verb/[:S1,:E]/,\verb/[:S2,:B]/) \\
+  All links of segment end & gfa.links\_of(\verb/[:S1,:E]/) \\
   (also segment instead of name) &
-  gfa.links\_of(\verb/[segment!("1"),:E]/) \\
-  Target of all links & gfa.neighbours(\verb/["1",:E]/) \\
+  gfa.links\_of(\verb/[segment!(:S1),:E]/) \\
+  Target of all links & gfa.neighbours(\verb/[:S1,:E]/) \\
   \hline
   Find containment  & gfa.containment(container,~contained)\\
                     & gfa.containment!(container,~contained)\\
@@ -124,10 +124,10 @@ Hamburg, Germany. This document is under CC-BY-SA license.}
   Delete sequences (set all to \texttt{*}) & gfa.rm(:sequences) \\
   \hline
   \textit{(rm with a method)} &\\
-  Delete links of segment end & gfa.rm(\verb/:links_of,["1","E]/) \\
-  Delete link targets  & gfa.rm(\verb/:neighbours,["1","E]/) \\
-  Delete paths of segment & gfa.rm(\verb/:paths_with,"1"/) \\
-  Delete segments contained in s & gfa.rm(\verb/:contained_in,"s"/) \\
+  Delete links of segment end & gfa.rm(\verb/:links_of,[:S1,"E]/) \\
+  Delete link targets  & gfa.rm(\verb/:neighbours,[:S1,"E]/) \\
+  Delete paths of segment & gfa.rm(\verb/:paths_with,:S1/) \\
+  Delete segments contained in s & gfa.rm(\verb/:contained_in,:s/) \\
   Delete s1-E links except to s2-B & gfa.delete\_other\_links(\verb/[s1,:E],[s2,:B]/)\\
   \hline
   Content of headers field & gfa.headers\_data[:xx] \\
