--- a/cheatsheet/rgfa-cheatsheet-1.2.1.tex
+++ b/cheatsheet/rgfa-cheatsheet-1.2.1.tex
@@ -8,7 +8,7 @@
 \usepackage{array}
 \fancyhf{}
 \renewcommand{\headrulewidth}{0pt}
-\rhead{\bfseries RGFA/RGFATools v.1.2 Cheatsheet (\thepage/\pageref{LastPage})
+\rhead{\bfseries RGFA/RGFATools v.1.2.1 Cheatsheet (\thepage/\pageref{LastPage})
 \hspace{1.1cm}}
 \lfoot{\tiny \ \ \ \ \ \ \ \ Copyright (c) 2016, Giorgio Gonnella, ZBH, University of
 Hamburg, Germany. This document is under CC-BY-SA license.}
@@ -54,17 +54,16 @@ Hamburg, Germany. This document is under CC-BY-SA license.}
   Write GFA to file & gfa.to\_file(filename) \\
   Write GFA to standard output & puts gfa \\
   Create deep copy & gfa.clone \\
-  Validate after manual edits & gfa.validate! \\
   Output statistics (normal/compact) & puts gfa.info; puts gfa.info(true) \\
   \hline
   Turn off validations & gfa.turn\_off\_validations \\
-  Segments first & gfa.require\_segments\_first\_order \\
+  Validate line references & gfa.validate! \\
   Enable progress logging & gfa.enable\_progress\_logging \\
   \hline
   Name of all segments & gfa.segment\_names \\
   Name of all paths & gfa.path\_names \\
   All segments, links, paths, etc & gfa.segments; gfa.links; gfa.paths; \ldots \\
-  Iterate over segments, links, etc & gfa.each\_segment \verb/{|s|...}/ \\
+  Iterate over segments, links, etc & gfa.segments.each \verb/{|s|...}/ \\
   \hline
   Find segment & gfa.segment(segment\_name) \\
   \ldots exception if does not exist  & gfa.segment!(segment\_name) \\
@@ -87,7 +86,7 @@ Hamburg, Germany. This document is under CC-BY-SA license.}
   \hline
   Add line (examples)        & gfa << "H\verb/\t/VZ:i:1.0" \\
                              & gfa << "S\verb/\t/a\verb/\t/*\verb/\t/LN:i:1200" \\
-  Rename segment or path & gfa.rename("old", "new") \\
+  Rename segment or path & gfa.rename(:old, :new) \\
   \hline
   Segment coverage & s.coverage\\
   Segment coverage (more accurate) & s.coverage(unit\_length:~avreadlen)\\
@@ -129,11 +128,8 @@ Hamburg, Germany. This document is under CC-BY-SA license.}
   Delete segments contained in s & gfa.rm(\verb/:contained_in,:s/) \\
   Delete s1-E links except to s2-B & gfa.delete\_other\_links(\verb/[s1,:E],[s2,:B]/)\\
   \hline
-  Content of headers field & gfa.header.xx \\
-  Replace header field content & gfa.set\_header\_field(:xx, 12, \\
-                               & \hspace{4.3cm})\\
-  Append to header field & gfa.set\_header\_field(:xx, 12,\\
-                               & \hspace{4.3cm}, existing: :add)\\
+  Access headers field & gfa.header.xx \\
+  Add new header field & gfa.header.add(:xx, 12)\\
   \hline
   Sum of read counts & \verb/gfa.segments.map(&:RC).inject(:+)/ \\
   Highest coverage & \verb/gfa.segments.map(&:coverage).max/ \\
@@ -150,7 +146,7 @@ Hamburg, Germany. This document is under CC-BY-SA license.}
   Split components & gfa.split\_connected\_components \\
   Number of dead ends & gfa.n\_dead\_ends \\
   \hline
-  \textit{(with RGFATools only)} & \\
+  \textit{(require "rgfatools")} & \\
   Muliply segment, distribute links & gfa.multiply("A", 4) \\
   Compute copy numbers & gfa.compute\_copy\_numbers \\
   Apply copy numbers & gfa.apply\_copy\_numbers \\
@@ -163,11 +159,11 @@ Hamburg, Germany. This document is under CC-BY-SA license.}
   Compare two GFA files & gfadiff.rb 1.gfa 2.gfa \\
   \ldots only segments and links & gfadiff.rb -s -l 1.gfa 2.gfa \\
   \ldots output as ruby script & gfadiff.rb -script 1.gfa 2.gfa \\
-  Merge linear paths in graph & simplify.rb 2.gfa > 3.gfa \\
+  Merge linear paths in graph & rgfa-mergelinear.rb 2.gfa > 3.gfa \\
   \hline
-  \textit{(Experimental command line tools)} & \\
-  Simulate de Bruijn graph & simulate\_debruijn.rb 27 gnm.fas > 1.gfa \\
-  \ldots and find CRISPRs candidates & find\_crisprs.rb 1.gfa \\
+  \textit{(Case studies CLI tools)} & \\
+  Simulate de Bruijn graph & rgfa-simdebruijn.rb 27 gnm.fas > 1.gfa \\
+  \ldots and find CRISPRs candidates & rgfa-findcrisprs.rb 1.gfa \\
   \hline
 \end{tabular}
 
