add support for newly-introduced comment lines

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,9 @@
 == 1.2.1 ==
 
-- support new segment tags SH and UR
-- change name of cigars field of paths to overlaps
+- update to changes in specification:
+-- support new segment tags SH and UR
+-- change name of cigars field of paths to overlaps
+-- support comment lines (which are ignored)
 - update cheatsheet
 - remove .rb suffix from bin/* scripts
 
