--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,7 +4,10 @@
 -- support new segment tags SH and UR
 -- change name of cigars field of paths to overlaps
 -- support comment lines (which are ignored)
-- simplified definition of canonical link (previously normal link)
+- adapt to terminology used in forum
+-- canonical link instead of normal link
+-- complement link instead of reverse link
+- simplified definition of canonical link
 - update cheatsheet
 - remove .rb suffix from bin/* scripts
 
