--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+== HEAD ==
+
+- improve handling of comment lines
+  (now: stored in RGFA object; edit, deletion, output)
+
 == 1.3.1 ==
 
 - fix: add file missing from gemspec
