make it possible to count header lines in the input
bump to version 1.2.3

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+== 1.2.3 ==
+
+- make it possible to count input header lines correctly
+
 == 1.2.2 ==
 
 - remove to/from aliases for GFA1 containment/link fields
